# omero_search_engine_client

./: .gitignore  MANIFEST.in  README.md  README.rst  index.html  manage.py  package-lock.json  package.json  readme.rst  requirements.txt  requirments.txt  setup.cfg  setup.py  svelte.config.js
.github/workflows/: pages.yml  prettier.yml  test_app.yml  test_build_app.yml
.github/workflows_unused/: test_build_app.yml
_app/: version.json
_app/immutable/assets/: 2.CCHQb8v6.css  2.DETP4I3Q.css  (+4 more)
deployment/docker/: .dockerignor
omero_search_client/: __init__.py
omero_search_client/app_data/: __init__.py  help.txt  restricted_search_terms.json
omero_search_client/configuration/: config.py  omero_search_client.yml
omero_search_client/main/: __init__.py  forms.py  utils.py  views.py
omero_search_client/templates/: base.html  main_page.html  main_page_new_gui.html
omero_search_engine_client/: __init__.py  apps.py  search_engine_settings.py  urls.py  version.py  views.py
omero_search_engine_client/main/: __init__.py
omero_search_engine_client/omero_search_engine_client.egg-info/: PKG-INFO  SOURCES.txt
src/: AutocompleteItem.svelte  app.html  containerStore.js  groupQueryStore.js  searchQueryStore.js  searchengine.js  util.js
src/components/: AutocompleteList.svelte  CentrePanel.svelte  CentrePanelGroups.svelte  FilterPopover.svelte  FilterPopoverRight.svelte  Groups.svelte  Images.svelte  LeftResultsPanel.svelte  Nav.svelte  RightPanel.svelte  ThumbnailRow.svelte
src/routes/: +layout.js  +page.svelte
svelte-kit/: ambient.d.ts
unit_tests/: test_app.py
(+86 files in other folders)
