[metadata]
name = omero_search_engine_client
description = Web UI for omero_search_engine
author = OME Team
license = LGPL
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/ome/omero_search_engine_client


# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
include_package_data = True
package_dir =
    =omero_search_engine_client

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.7

[options.packages.find]
where = omero_search_engine_client
